Fix ontologies overlapping datetime picker

--- a/src/common/components/dateTimePicker/dateTimePicker.module.scss
+++ b/src/common/components/dateTimePicker/dateTimePicker.module.scss
@@ -54,7 +54,7 @@
       padding: 1.2rem 1.2rem;
       left: 0;
       right: 0;
-      z-index: 100;
+      z-index: 1000;
       display: flex;
       flex-flow: column;
 
